--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+
 #areaForPaint {
     border: 5px solid darkblue;
     height: 450px;
@@ -14,7 +15,17 @@
     bottom: 0;
     top: 0;
     cursor: crosshair;
+}
 
+#text_tool {
+    position: absolute;
+    border: 1px dashed black;
+    outline: 0;
+    display: none;
+    font-family: "Lucida Grande", sans-serif;
+    font-size: 14px;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .black, .white, .blue, .green, .yellow, .red, .purple {
